# pxt-engine

./: .env.example.unix  .env.example.windows  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  start.bat  start.sh
Application/src/: application.cpp  camera_controller.cpp  camera_controller.hpp  rotating_light_controller.cpp  rotating_light_controller.hpp
Engine/src/: application.cpp  application.hpp  cgengine.h  engine.cpp  engine.hpp  main.cpp  pxtengine.h
Engine/src/core/: buffer.hpp  constants.hpp  diagnostics.hpp  error_handling.hpp  logger.cpp  logger.hpp  memory.hpp  pch.hpp  platform.hpp  system.hpp  uuid.cpp  uuid.hpp
Engine/src/core/events/: event.hpp  event_dispatcher.hpp  key_code.hpp  keyboard_event.hpp  mouse_event.hpp  window_event.hpp
Engine/src/core/events/mapper/: glfw_event_mapper.hpp
Engine/src/core/input/: input.hpp  key_code.hpp
Engine/src/core/input/mapper/: glfw_input_mapper.hpp
Engine/src/graphics/: buffer.cpp  buffer.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_info.hpp  image.cpp  image.hpp  instance.cpp  model.cpp  model.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  surface.cpp  surface.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
Engine/src/graphics/context/: context.cpp  context.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  ray_tracing_vk_ext_func.cpp  ray_tracing_vk_ext_func.hpp  surface.cpp  surface.hpp
Engine/src/graphics/descriptors/: descriptor_allocator.cpp  descriptor_allocator.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_writer.cpp  descriptor_writer.hpp  descriptors.hpp
Engine/src/graphics/render_systems/: debug_render_system.cpp  debug_render_system.hpp  master_render_system.cpp  master_render_system.hpp  material_render_system.cpp  material_render_system.hpp  point_light_system.cpp  point_light_system.hpp  raytracing_render_system.cpp  raytracing_render_system.hpp  raytracing_scene_manager_system.cpp  raytracing_scene_manager_system.hpp  shadow_map_render_system.cpp  shadow_map_render_system.hpp  simple_render_system.cpp  simple_render_system.hpp  skybox_render_system.cpp  skybox_render_system.hpp  tlas_build_system.cpp  tlas_build_system.hpp  ui_render_system.cpp  ui_render_system.hpp
Engine/src/graphics/resources/: blas_registry.cpp  blas_registry.hpp  buffer.cpp  buffer.hpp  cube_map.cpp  cube_map.hpp  image.cpp  image.hpp  material_registry.cpp  material_registry.hpp  model.cpp  model.hpp  shadow_cube_map.cpp  shadow_cube_map.hpp  skybox.cpp  skybox.hpp  texture2d.cpp  texture2d.hpp  texture_registry.cpp  texture_registry.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_image.cpp  vk_image.hpp  vk_mesh.cpp  vk_mesh.hpp  vk_model.cpp  vk_model.hpp  vk_shader.cpp  vk_shader.hpp  vk_skybox.cpp  vk_skybox.hpp
Engine/src/resources/: resource.hpp  resource_manager.cpp  resource_manager.hpp
Engine/src/resources/importers/: mesh_importer.cpp  mesh_importer.hpp  model_importer.cpp  model_importer.hpp  resource_importer.cpp  resource_importer.hpp  texture_importer.cpp  texture_importer.hpp
Engine/src/resources/types/: image.hpp  material.cpp  material.hpp  mesh.hpp  model.hpp
Engine/src/scene/: camera.cpp  camera.hpp  environment.cpp  environment.hpp  scene.cpp  scene.hpp  skybox.hpp
Engine/src/scene/ecs/: component.cpp  component.hpp  entity.hpp
Engine/src/scene/script/: script.hpp
Engine/src/utils/: hash_func.hpp  timer.hpp
assets/imgui_config/: imgui.ini
assets/shaders/: cube_shadow_map_creation.frag  cube_shadow_map_creation.vert  debug_shader.frag  debug_shader.vert  material_shader.frag  material_shader.vert  point_light.frag  point_light.vert  point_light_billboard.frag  point_light_billboard.vert  shadow_map_creation.vert  simple_shader.frag  simple_shader.vert  skybox.frag  skybox.vert
assets/shaders/common/: geometry.glsl  math.glsl  payload.glsl  point_light.glsl  random.glsl  ray.glsl  tone_mapping.glsl
assets/shaders/lighting/: blinn_phong_lighting.glsl  point_light.glsl  shadow_map.glsl
assets/shaders/material/: surface_normal.glsl
assets/shaders/material/pbr/: brdf.glsl  brdf_config.glsl  brdf_diffuse.glsl  brdf_fresnel.glsl  brdf_normal_distribution.glsl  brdf_visibility.glsl  bsdf.glsl
assets/shaders/raytracing/: pathtracing.rchit  pathtracing.rgen  pathtracing.rmiss  pbr.rchit  pbr.rgen  pbr.rmiss  primary.rchit  primary.rgen  primary.rmiss  sky.glsl  visibility.rchit  visibility.rmiss
assets/shaders/ubo/: global_ubo.glsl  shadow_ubo.glsl
enc_temp_folder/914afdf4634d363876fcde0a077fa98/: material_shader.frag
scripts/: start.bat  start.sh
shaders/: simple_shader.frag  simple_shader.vert
src/: device.cpp  device.hpp  engine.cpp  engine.hpp  main.cpp
src/core/: base.hpp  uuid.cpp  uuid.hpp  window.cpp  window.hpp
src/core/events/: event.hpp  key_code.hpp  keyboard_event.hpp  window_event.hpp
src/core/events/mapper/: glfw_event_mapper.hpp
src/graphics/: camera.cpp  camera.hpp  device.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
src/graphics/render_systems/: simple_render_system.cpp  simple_render_system.hpp
src/renderer/: pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp
src/scene/: scene.cpp  scene.hpp
src/scene/ecs/: component.hpp  entity.hpp
src/scene/script/: script.hpp
